[package]
name = "classfile-rs"
version = "0.1.0"
authors = ["mastercooker <c.o.okiedragon234@gmail.com>"]
edition = "2018"

[lib]
name = "classfile"
path = "src/lib.rs"

[[bin]]
name = "dissasembler"
path = "src/bin.rs"
[profile.release]
debug = true

[dependencies]
byteorder = "1.3.4"
derive_more = { version = "0.99.11", default-features = false, features = ["constructor"] }
thiserror = "1.0.21"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "read_class"
harness = false
