[package]
name = "classfile-rs"
version = "0.1.0"
authors = ["mastercooker <c.o.okiedragon234@gmail.com>"]
edition = "2018"

[lib]
name = "classfile"
path = "src/lib.rs"

[[bin]]
name = "dissasembler"
path = "src/bin.rs"
[profile.release]
debug = true

[dependencies]
byteorder = "1.3.4"
derive_more = { version = "0.99.11", default-features = false, features = ["constructor"] }
thiserror = "1.0.21"
enum-display-derive = { git = "https://github.com/bytechef/enum-display-derive" }
linked-hash-map = "0.5.3"
mutf8 = "0.4.1"
bitflags = "1.2.1"

[dev-dependencies]
criterion = "0.3.3"
rayon = "1.4.1"

[[bench]]
name = "read_class"
harness = false
